--- a/index.html
+++ b/index.html
@@ -39,22 +39,36 @@
     </div>
     <script>
         const sounds = {
-            'u': new Audio('U.mp4'),
-            'i': new Audio('I.mp4'),
-            'a': new Audio('A.mp4')
-        };
-        
-        let rotation = 0;
-        
-        document.addEventListener('keydown', (event) => {
-            let key = event.key.toLowerCase();
-            if (sounds[key]) {
-                sounds[key].currentTime = 0;
-                sounds[key].play();
-                rotation += 30;
-                document.getElementById('cat').style.transform = `rotate(${rotation}deg)`;
-            }
-        });
+		'u': new Audio('U.mp4'),
+		'i': new Audio('I.mp4'),
+		'a': new Audio('A.mp4')
+		};
+
+		let rotation = 0;
+		let soundIntervals = {};
+
+		document.addEventListener('keydown', (event) => {
+			let key = event.key.toLowerCase();
+			if (sounds[key] && !soundIntervals[key]) {
+				sounds[key].currentTime = 0;
+				sounds[key].play();
+				rotation += 30;
+				document.getElementById('cat').style.transform = `rotate(${rotation}deg)`;
+
+				soundIntervals[key] = setInterval(() => {
+					sounds[key].currentTime = 0;
+					sounds[key].play();
+				}, 300);
+			}
+		});
+
+		document.addEventListener('keyup', (event) => {
+			let key = event.key.toLowerCase();
+			if (sounds[key] && soundIntervals[key]) {
+				clearInterval(soundIntervals[key]);
+				delete soundIntervals[key];
+			}
+		});
     </script>
 </body>
 </html>
