--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
             height: auto;
             transition: transform 0.1s;
         }
+        .mobile-buttons {
+            display: none;
+            margin-top: 20px;
+        }
+        .mobile-buttons button {
+            font-size: 24px;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #444;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        @media (max-width: 768px) {
+            .mobile-buttons {
+                display: flex;
+            }
+        }
     </style>
 </head>
 <body>
@@ -37,38 +56,45 @@
     <div class="cat-container">
         <img src="uia_cat.png" class="cat" id="cat">
     </div>
+    <div class="mobile-buttons">
+        <button onclick="playSound('u')">U</button>
+        <button onclick="playSound('i')">I</button>
+        <button onclick="playSound('a')">A</button>
+    </div>
     <script>
         const sounds = {
-		'u': new Audio('U.mp4'),
-		'i': new Audio('I.mp4'),
-		'a': new Audio('A.mp4')
-		};
+            'u': new Audio('U.mp4'),
+            'i': new Audio('I.mp4'),
+            'a': new Audio('A.mp4')
+        };
 
-		let rotation = 0;
-		let soundIntervals = {};
+        let rotation = 0;
+        let soundIntervals = {};
 
-		document.addEventListener('keydown', (event) => {
-			let key = event.key.toLowerCase();
-			if (sounds[key] && !soundIntervals[key]) {
-				sounds[key].currentTime = 0;
-				sounds[key].play();
-				rotation += 30;
-				document.getElementById('cat').style.transform = `rotate(${rotation}deg)`;
+        function playSound(key) {
+            if (sounds[key]) {
+                sounds[key].currentTime = 0;
+                sounds[key].play();
+                rotation += 30;
+                document.getElementById('cat').style.transform = `rotate(${rotation}deg)`;
+            }
+        }
 
-				soundIntervals[key] = setInterval(() => {
-					sounds[key].currentTime = 0;
-					sounds[key].play();
-				}, 300);
-			}
-		});
+        document.addEventListener('keydown', (event) => {
+            let key = event.key.toLowerCase();
+            if (sounds[key] && !soundIntervals[key]) {
+                playSound(key);
+                soundIntervals[key] = setInterval(() => playSound(key), 300);
+            }
+        });
 
-		document.addEventListener('keyup', (event) => {
-			let key = event.key.toLowerCase();
-			if (sounds[key] && soundIntervals[key]) {
-				clearInterval(soundIntervals[key]);
-				delete soundIntervals[key];
-			}
-		});
+        document.addEventListener('keyup', (event) => {
+            let key = event.key.toLowerCase();
+            if (sounds[key] && soundIntervals[key]) {
+                clearInterval(soundIntervals[key]);
+                delete soundIntervals[key];
+            }
+        });
     </script>
 </body>
 </html>
